--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,9 @@
   "networkAccess": {
     "allowedDomains": [
       "none"
+    ],
+    "devAllowedDomains": [
+      "http://localhost:3000"
     ]
   }
 }
