--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,14 @@
     "lib": ["es6"],
     "typeRoots": [
       "./node_modules/@types",
-      "./node_modules/@figma"
+      "./node_modules/@figma",
+      "./node_modules/octokit/dist-types"
     ],
     "outDir": "./dist",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
+    // "moduleResolution": "Node16",
+    "module": "Node16"
   },
   "include": ["src/**/*.ts"]
 }
